# spatial-agent

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.agent  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  test_tools_access.py
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml  main.yml
docs/: index.md  modules.md
spatial_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  agents.py  hooks.py  main.py
spatial_agent/agent/: __init__.py  make_llm.py  make_prompt.py  skills.py  spatialagent.py  tool_system.py  utils.py
spatial_agent/skills/: __init__.py  annotation.md  cell_cell_communication.md  mapping_validation.md  panel_design.md
spatial_agent/skills/spatial/: skill.yaml
spatial_agent/tools/: README.md  __init__.py  analytics.py  coding.py  databases.py  foundry.py  interpretation.py  literature.py  subagent.py  utils.py
tests/: test_main.py
